--- 2.1.44 2007/01/03

Added yaz_marc_write_xml which creates MARCXML/MarcXchange record as
Libxml2 tree.

Fixed bug #779: Rotation of apdu.log fails.

Fixed for character set conversions:
  Unicode to MARC-8 conversion for certain less preferred UTF-8 sequences.
  Honor G1 set in MARC-8 decoding.

--- 2.1.42 2006/12/17

Fixed bug #775: char conversion does not handle Alternative UTF-8
sequences.

Implemented function yaz_marc_read_line which parses MARC line format
records. There is a wealth of formats out there. So far, this function
reads line records produced by yaz_marc_write_line.

yaz-marcdump's options -x, -X, -I, -e have been replaced with the
more generic and easier to remember(!) options: -i format and -o format
which specifies input format and output format respectively - where
format is one of "marc", "marcxml", "line", "marcxchange".

Added 'check only' option for MARC utilities. Option -n for yaz-marcdump
does not print anything except warnings for records.

For yaz-marcdump, added support for MARC split into files (-s) with a given
chunk size (-C).

Changed the SRU update structures and codecs to reflect the SRU pre 1.0
spec, at http://www.loc.gov/standards/sru/record-update/
This has changed the binary layout of the following structs:
Z_SRW_extra_record, Z_SRW_updateRequest, Z_SRW_updateResponse and
bend_update_rr . Patch by Ko van der Sloot.

Added GFS utility function bend_assoc_is_alive which returns 1 if
association is still alive (client is connected); 0 otherwise (client
closed connection). This allows busy servers to stop working for
impatient clients.

Added ziffy: the promiscuous Z39.50 APDU sniffer. until now, ziffy has
been a separate piece of software. This version of ziffy has been modified
to fit with YAZ. ziffy is copyright Rocco Carbone and covered by GPL v2.

Fixed bug #740: Handle SRU records referring to xmlns's outside recordData.

Fixed bug #722: Allow Z39.50 Init Options to be specified / retrieved.