@@ -1,11 +1,11 @@
-## $Id: Makefile.am,v 1.36 2006-12-13 11:25:17 adam Exp $
+## $Id: Makefile.am,v 1.37 2007-01-03 13:46:17 adam Exp $
 
 pkginclude_HEADERS= backend.h ccl.h cql.h comstack.h \
  diagbib1.h diagsrw.h diagsru_update.h sortspec.h log.h logrpn.h marcdisp.h \
  nmem.h nmem_xml.h odr.h \
  oid.h options.h otherinfo.h pquery.h prt-ext.h querytowrbuf.h \
  readconf.h record_conv.h retrieval.h statserv.h \
- tcpip.h test.h unix.h tpath.h wrbuf.h xmalloc.h \
+ tcpip.h test.h timing.h unix.h tpath.h wrbuf.h xmalloc.h \
  yaz-ccl.h yaz-iconv.h yaz-util.h yaz-version.h yconfig.h proto.h \
  xmlquery.h libxml2_error.h xmltypes.h \
  \
